# sharecipe

./: CONTRIBUTING.md  MANIFEST.in  README.md  README.txt  config.py  pyproject.toml
sharecipe/: __init__.py  admin.py  forms.py  schema.sql  util.py  wsgi.py
sharecipe/account/: __init__.py  forms.py  views.py
sharecipe/auth/: __init__.py  controllers.py  forms.py  helpers.py  models.py  views.py
sharecipe/controllers/: auth.py
sharecipe/core/: email.py
sharecipe/database/: comments.py  models.py  profiles.py  recipes.py  users.py
sharecipe/forms/: account.py  auth.py  recipe.py
sharecipe/main/: views.py
sharecipe/models/: comment.py  profile.py  recipe.py  user.py
sharecipe/recipe/: controllers.py  forms.py  views.py
sharecipe/social/: .views.py.swp  __init__.py  views.py
sharecipe/static/: print.css  recipe.js  script.js  style.css  wakelock.js
sharecipe/templates/: base.html  email.html  error.html  macros.html
sharecipe/user/: __init__.py  controllers.py  helpers.py  views.py
sharecipe/views/: account.py  auth.py  main.py  recipe.py  user.py
tests/: .test_factory.py.swp  conftest.py  data.sql  test_account.py  test_auth.py  test_db.py  test_factory.py  test_forms.py  test_main.py  test_recipe.py  test_user.py  test_util.py  test_wsgi.py
website/: .__init__.py.swp  .db.py.swp  .schema.sql.swp  __init__.py  db.py  forms.py  schema.sql  util.py
website/account/: .views.py.swp  views.py
website/auth/: .views.py.swp  __init__.py  auth.py  views.py
website/main/: views.py
website/minecraft/: __init__.py  minecraft.py  views.py  (+1 more)
(+57 files in other folders)
