[project]
name = "website"
version = "1.1.3"
description = "My useful website"
readme = "README.md"
dependencies = [
	"flask",
	"Flask-WTF",
	"Pillow",
	"WTForms",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["website"]
