[project]
name = "sharecipe"
version = "1.0.3"
description = "An online recipe sharing website"
readme = "README.md"
dependencies = [
	"email_validator",
	"flask",
	"Flask-WTF",
	"gunicorn",
	"Pillow",
	"WTForms",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["sharecipe"]
